desktop-app/wandb/run-20250801_203523-9gpnhpfx/files/output.log
[36m[1mweave[0m: Error patching - some logs may not be captured
[36m[1mweave[0m: Traceback (most recent call last):
[36m[1mweave[0m:   File "C:\Users\AMD\AppData\Local\Programs\Python\Python311\Lib\site-packages\weave\integrations\patcher.py", line 36, in attempt_patch
[36m[1mweave[0m:     all_successful = all_successful and patcher.attempt_patch()
[36m[1mweave[0m:                                         ^^^^^^^^^^^^^^^^^^^^^^^
[36m[1mweave[0m:   File "C:\Users\AMD\AppData\Local\Programs\Python\Python311\Lib\site-packages\weave\integrations\patcher.py", line 98, in attempt_patch
[36m[1mweave[0m:     original_value = getattr(target.base_symbol, target.attr)
[36m[1mweave[0m:                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
[36m[1mweave[0m: AttributeError: type object 'Models' has no attribute 'generate_images'
[36m[1mweave[0m: Logged in as Weights & Biases user: elliotttmiller.
[36m[1mweave[0m: View Weave data at https://wandb.ai/elliotttmiller-north-hennepin-community-college/cognitive-forge-v5/weave
[34m[1mwandb[0m: wandb.init() called while a run is active and reinit is set to 'default', so returning the previous run.
Process SpawnProcess-10:
Traceback (most recent call last):
  File "C:\Users\AMD\AppData\Local\Programs\Python\Python311\Lib\multiprocessing\process.py", line 314, in _bootstrap
    self.run()
  File "C:\Users\AMD\AppData\Local\Programs\Python\Python311\Lib\multiprocessing\process.py", line 108, in run
    self._target(*self._args, **self._kwargs)
  File "C:\Users\AMD\AppData\Local\Programs\Python\Python311\Lib\site-packages\uvicorn\_subprocess.py", line 80, in subprocess_started
    target(sockets=sockets)
  File "C:\Users\AMD\AppData\Local\Programs\Python\Python311\Lib\site-packages\uvicorn\server.py", line 67, in run
    return asyncio.run(self.serve(sockets=sockets))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\AMD\AppData\Local\Programs\Python\Python311\Lib\asyncio\runners.py", line 190, in run
    return runner.run(main)
           ^^^^^^^^^^^^^^^^
  File "C:\Users\AMD\AppData\Local\Programs\Python\Python311\Lib\asyncio\runners.py", line 118, in run
    return self._loop.run_until_complete(task)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\AMD\AppData\Local\Programs\Python\Python311\Lib\asyncio\base_events.py", line 654, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "C:\Users\AMD\AppData\Local\Programs\Python\Python311\Lib\site-packages\uvicorn\server.py", line 71, in serve
    await self._serve(sockets)
  File "C:\Users\AMD\AppData\Local\Programs\Python\Python311\Lib\site-packages\uvicorn\server.py", line 78, in _serve
    config.load()
  File "C:\Users\AMD\AppData\Local\Programs\Python\Python311\Lib\site-packages\uvicorn\config.py", line 436, in load
    self.loaded_app = import_from_string(self.app)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\AMD\AppData\Local\Programs\Python\Python311\Lib\site-packages\uvicorn\importer.py", line 19, in import_from_string
    module = importlib.import_module(module_str)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\AMD\AppData\Local\Programs\Python\Python311\Lib\importlib\__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "C:\Users\AMD\sentinel\desktop-app\src\main.py", line 33, in <module>
    from .utils.test_mission_system import test_mission_system
  File "C:\Users\AMD\sentinel\desktop-app\src\utils\test_mission_system.py", line 223
    }
    ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '(' on line 178
